# alan-cli

./: .alan_history  README.md  app.py  pyproject.toml
src/alan/: main.py  todo.md
src/alan_ai_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
